# ComposeSoundfontDemo

./: .gitignore  FLUIDSYNTH_ANDROID_SETUP.md  LICENSE  README.md  WASM_IMPLEMENTATION.md  iOS_FLUIDSYNTH_INTEGRATION_PLAN.md  settings.gradle.kts
.github/workflows/: deploy-wasm.yml
composeApp/: build.gradle.kts
composeApp/Frameworks/FluidSynth.xcframework/ios-arm64/FluidSynth.framework/: FluidSynth  Info.plist
composeApp/Frameworks/FluidSynth.xcframework/ios-arm64/dSYMs/FluidSynth.framework.dSYM/Contents/: Info.plist
composeApp/Frameworks/FluidSynth.xcframework/ios-arm64/dSYMs/FluidSynth.framework.dSYM/Contents/Resources/DWARF/: FluidSynth
composeApp/Frameworks/FluidSynth.xcframework/ios-arm64/dSYMs/FluidSynth.framework.dSYM/Contents/Resources/Relocations/aarch64/: FluidSynth.yml
composeApp/Frameworks/FluidSynth.xcframework/ios-arm64_x86_64-simulator/FluidSynth.framework/: FluidSynth  Info.plist
composeApp/Frameworks/FluidSynth.xcframework/ios-arm64_x86_64-simulator/dSYMs/FluidSynth.framework.dSYM/Contents/Resources/Relocations/aarch64/: FluidSynth.yml
composeApp/Frameworks/FluidSynth.xcframework/ios-arm64_x86_64-simulator/dSYMs/FluidSynth.framework.dSYM/Contents/Resources/Relocations/x86_64/: FluidSynth.yml
composeApp/Frameworks/SDL3.xcframework/: Info.plist
composeApp/Frameworks/SDL3.xcframework/ios-arm64/SDL3.framework/: Info.plist  SDL3
composeApp/Frameworks/SDL3.xcframework/ios-arm64/dSYMs/SDL3.framework.dSYM/Contents/Resources/Relocations/aarch64/: SDL3.yml
composeApp/Frameworks/SDL3.xcframework/ios-arm64_x86_64-simulator/SDL3.framework/: Info.plist  SDL3
composeApp/Frameworks/SDL3.xcframework/ios-arm64_x86_64-simulator/SDL3.framework/_CodeSignature/: CodeResources
composeApp/Frameworks/SDL3.xcframework/macos-arm64_x86_64/SDL3.framework/Resources/: Info.plist
composeApp/Frameworks/SDL3.xcframework/macos-arm64_x86_64/SDL3.framework/Versions/A/_CodeSignature/: CodeResources
composeApp/Frameworks/SDL3.xcframework/macos-arm64_x86_64/dSYMs/SDL3.framework.dSYM/Contents/: Info.plist
composeApp/Frameworks/SDL3.xcframework/macos-arm64_x86_64/dSYMs/SDL3.framework.dSYM/Contents/Resources/Relocations/aarch64/: SDL3.yml
composeApp/Frameworks/SDL3.xcframework/macos-arm64_x86_64/dSYMs/SDL3.framework.dSYM/Contents/Resources/Relocations/x86_64/: SDL3.yml
composeApp/Frameworks/SDL3.xcframework/tvos-arm64/SDL3.framework/: Info.plist  SDL3
composeApp/Frameworks/SDL3.xcframework/tvos-arm64/dSYMs/SDL3.framework.dSYM/Contents/Resources/Relocations/aarch64/: SDL3.yml
composeApp/Frameworks/SDL3.xcframework/tvos-arm64_x86_64-simulator/SDL3.framework/: Info.plist  SDL3
composeApp/Frameworks/SDL3.xcframework/tvos-arm64_x86_64-simulator/SDL3.framework/_CodeSignature/: CodeResources
composeApp/src/androidMain/: README.md
composeApp/src/androidMain/cpp/: CMakeLists.txt  fluidsynth_wrapper.cpp
composeApp/src/androidMain/cpp/fluidsynth/lib/arm64-v8a/cmake/FLAC/: targets.cmake
composeApp/src/androidMain/cpp/fluidsynth/lib/arm64-v8a/cmake/fluidsynth/: FluidSynth-shared-targets.cmake
composeApp/src/androidMain/cpp/fluidsynth/lib/armeabi-v7a/cmake/Opus/: OpusConfig.cmake
composeApp/src/androidMain/cpp/fluidsynth/lib/armeabi-v7a/cmake/SndFile/: SndFileConfig.cmake  SndFileTargets.cmake
composeApp/src/androidMain/cpp/fluidsynth/lib/armeabi-v7a/cmake/fluidsynth/: FluidSynthConfig.cmake
composeApp/src/androidMain/cpp/fluidsynth/lib/x86/cmake/Ogg/: OggTargets.cmake
composeApp/src/androidMain/cpp/fluidsynth/lib/x86/cmake/Opus/: OpusTargets.cmake
composeApp/src/androidMain/cpp/fluidsynth/lib/x86/cmake/Vorbis/: VorbisTargets.cmake
composeApp/src/androidMain/cpp/fluidsynth/lib/x86/pkgconfig/: fluidsynth.pc
composeApp/src/androidMain/kotlin/org/tetawex/cmpsftdemo/: FluidSynthJNI.kt  FluidSynthWrapper.kt  MainActivity.kt  MidiManager.android.kt  Platform.android.kt  SynthManager.android.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/kotlin/org/tetawex/cmpsftdemo/: App.kt  Greeting.kt  MidiManager.kt  Platform.kt  SynthManager.kt
composeApp/src/commonTest/kotlin/org/tetawex/cmpsftdemo/: ComposeAppCommonTest.kt
composeApp/src/iosMain/: README.md
composeApp/src/iosMain/interop/: fluidsynth.def  sdl3.def
composeApp/src/iosMain/kotlin/org/tetawex/cmpsftdemo/: FluidSynthInterop.kt  MainViewController.kt  Platform.ios.kt  SynthManager.ios.kt
composeApp/src/jsMain/kotlin/org/tetawex/cmpsftdemo/: MidiManager.js.kt  Platform.js.kt  SynthManager.js.kt
composeApp/src/jvmMain/kotlin/org/tetawex/cmpsftdemo/: Platform.jvm.kt  SynthManager.jvm.kt  main.kt
composeApp/src/wasmJsMain/: README.md
composeApp/src/wasmJsMain/kotlin/org/tetawex/cmpsftdemo/: MidiInputManager.wasmJs.kt  Platform.wasmJs.kt  SynthManager.wasmJs.kt
composeApp/src/wasmJsMain/resources/: index.html  js-synthesizer.min.js
composeApp/src/webMain/kotlin/org/tetawex/cmpsftdemo/: main.kt
composeApp/src/webMain/resources/: index.html
composeApp/webpack.config.d/: fluidsynth.js
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
iosApp/iosApp.xcodeproj/xcshareddata/xcschemes/: iosApp.xcscheme
